deployment_with_toleration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-with-toleration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      tolerations:
      - key: special
        operator: "Equal"
        value: "tainted"
        effect: "NoSchedule"
      containers:
      - name: my-container
        image: nginx:latest
        ports:
        - containerPort: 80
